<resources>
    <string name="app_name">MontyMobile</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="phone_number">Phone Number... (9233512345678)</string>
    <string name="confirm">Confirm</string>
    <string name="enter_the_digit_4_digit_code_sent_to_you_at">Enter the digit 4-digit code sent to you at</string>
    <string name="_923344903285">+923344903285</string>
    <string name="title_activity_dashboard">Dashboard</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="resend_code_in">Resend Code in</string>
    <string name="_00_15">00:15</string>
    <string name="phone_number_name">Phone number , Name…</string>
    <string name="loading">loading…</string>
    <string name="profile">Profile</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="change_number">Change Number</string>
    <string name="regional">Regional</string>
    <string name="edit_language">Edit Language</string>
    <string name="logout">Logout</string>
    <string name="profile_photo">Profile Photo</string>
    <string name="name">Name</string>
    <string name="mohmmad_edeline">Mohmmad Edeline</string>
    <string name="number">Number</string>
    <string name="address">Address</string>
</resources>
