<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:padding="16dp"
              android:background="@android:color/transparent"
              android:layout_width="match_parent"
              android:layout_height="wrap_content">

    <LinearLayout
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <ImageView
                android:src="@drawable/avatar"
                android:layout_width="56dp"
                android:layout_height="56dp"/>

        <LinearLayout
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_weight="1"

                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_height="wrap_content">
            <TextView android:layout_width="wrap_content"
                      android:id="@+id/name"
                      android:text="@string/name"
                      android:textColor="@color/white"
                      android:textSize="16sp"
                      android:layout_height="wrap_content"/>

            <TextView android:layout_width="wrap_content"
                      android:id="@+id/number"
                      android:text="@string/number"
                      android:textColor="@color/white"
                      android:textSize="16sp"
                      android:layout_height="wrap_content"/>

            <TextView android:layout_width="wrap_content"
                      android:id="@+id/address"
                      android:text="@string/address"
                      android:textSize="16sp"
                      android:textColor="@color/white"
                      android:layout_height="wrap_content"/>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>