<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:id="@+id/layout_drawer"
              android:layout_width="match_parent"

              android:layout_height="match_parent"
              android:animateLayoutChanges="true"
              android:orientation="vertical">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <LinearLayout
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="156dp">
            <ImageView
                    android:src="@drawable/logo2"
                    android:layout_width="80dp"
                    android:layout_height="80dp"/>

        </LinearLayout>

        <TextView
                android:layout_marginLeft="16dp"
                android:text="@string/profile"
                android:textColor="@color/text"
                android:textSize="18sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        <LinearLayout
                android:layout_marginLeft="16dp"
                android:layout_marginTop="8dp"
                android:padding="8dp"
                android:id="@+id/editProfile"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <ImageView
                    android:src="@drawable/edit_profile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            <TextView
                    android:layout_marginLeft="8dp"
                    android:text="@string/edit_profile"
                    android:textColor="@color/text"
                    android:textSize="14sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
        </LinearLayout>
        <LinearLayout
                android:layout_marginLeft="16dp"
                android:padding="8dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <ImageView
                    android:src="@drawable/change_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            <TextView
                    android:layout_marginLeft="8dp"
                    android:text="@string/change_number"
                    android:textColor="@color/text"
                    android:textSize="14sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
        </LinearLayout>

        <View
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:background="@color/light_gray"
                android:layout_width="match_parent"
                android:layout_height="1dp"/>


        <TextView
                android:layout_marginLeft="16dp"
                android:text="@string/regional"
                android:textColor="@color/text"
                android:textSize="18sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        <LinearLayout
                android:layout_marginLeft="16dp"
                android:layout_marginTop="8dp"
                android:padding="8dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <ImageView
                    android:src="@drawable/edit_language"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            <TextView
                    android:layout_marginLeft="8dp"
                    android:text="@string/edit_language"
                    android:textColor="@color/text"
                    android:textSize="14sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
        </LinearLayout>
        <LinearLayout
                android:layout_marginLeft="16dp"
                android:padding="8dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <ImageView
                    android:src="@drawable/logout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            <TextView
                    android:layout_marginLeft="8dp"
                    android:text="@string/logout"
                    android:textColor="@color/text"
                    android:textSize="14sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
        </LinearLayout>
    </LinearLayout>


</LinearLayout>