<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:layout_width="match_parent"
                                             android:background="@color/white"
                                             android:layout_height="match_parent"
                                             tools:context=".ui.fragments.VerificationFragment">

    <LinearLayout
            android:layout_margin="8dp"
            android:orientation="vertical"
            android:padding="16dp"
            android:layout_width="0dp"
            android:layout_height="0dp" android:id="@+id/linearLayout" android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginStart="8dp" android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            app:layout_constraintHorizontal_bias="0.0" app:layout_constraintVertical_bias="0.0">

        <ImageView
                android:id="@+id/back"
                android:src="@drawable/ic_arrow_back_black_24dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        <TextView
                android:layout_marginTop="32dp"
                android:text="@string/enter_the_digit_4_digit_code_sent_to_you_at"
                android:textSize="18sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        <TextView
                android:textStyle="bold"
                android:text="@string/_923344903285"
                android:textSize="18sp"
                android:id="@+id/txtNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>


        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:orientation="horizontal"
                android:weightSum="6">

            <EditText
                    android:id="@+id/d1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_margin="3dp"
                    android:theme="@style/SignUpEditTextTheme"
                    android:textColor="@android:color/black"
                    android:inputType="number"
                    android:gravity="center"
                    android:maxLength="1"/>

            <EditText
                    android:id="@+id/d2"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_margin="3dp"
                    android:theme="@style/SignUpEditTextTheme"
                    android:textColor="@android:color/black"
                    android:inputType="number"
                    android:gravity="center"
                    android:maxLength="1"/>

            <EditText
                    android:id="@+id/d3"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_margin="3dp"
                    android:theme="@style/SignUpEditTextTheme"
                    android:textColor="@android:color/black"
                    android:inputType="number"
                    android:gravity="center"
                    android:maxLength="1"/>

            <EditText
                    android:id="@+id/d4"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_margin="3dp"
                    android:theme="@style/SignUpEditTextTheme"
                    android:textColor="@android:color/black"
                    android:inputType="number"
                    android:gravity="center"
                    android:maxLength="1"/>


        </LinearLayout>

        <LinearLayout
                android:layout_gravity="center"

                android:layout_marginTop="8dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <TextView
                    android:id="@+id/txtTime"
                    android:text="@string/resend_code_in"
                    android:textSize="18sp"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            <TextView
                    android:id="@+id/time"
                    android:layout_marginLeft="4dp"
                    android:text="@string/_00_15"
                    android:textSize="18sp"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"/>


            <LinearLayout
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <ImageView
                        android:id="@+id/next"
                        android:layout_width="32dp"
                        android:layout_gravity="end"
                        android:gravity="end"
                        android:src="@drawable/ic_right_arrow"
                        android:layout_height="32dp"/>
            </LinearLayout>



        </LinearLayout>


    </LinearLayout>

</android.support.constraint.ConstraintLayout>