<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent"
                                             tools:context=".ui.fragments.EditProfileFragment">

    <LinearLayout
            android:orientation="vertical"

            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/linearLayout3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
                android:padding="@dimen/activity_horizontal_margin"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="220dp">
            <ImageView
                    android:id="@+id/back"
                    android:src="@drawable/ic_arrow_back_black_24dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            <LinearLayout
                    android:layout_weight="1"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:layout_marginBottom="16dp"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                <ImageView

                        android:src="@drawable/avatar"
                        android:layout_width="120dp"
                        android:layout_height="120dp"/>
            </LinearLayout>

            <TextView
                    android:layout_gravity="center"
                    android:textSize="18sp"
                    android:text="@string/profile_photo"
                    android:textColor="@color/colorPrimary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

        </LinearLayout>
        <LinearLayout
                android:padding="@dimen/activity_horizontal_margin"
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:background="@drawable/bg"
                android:layout_height="match_parent">
            <LinearLayout
                    android:layout_marginTop="@dimen/activity_horizontal_margin"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <LinearLayout
                        android:layout_weight="1"
                        android:orientation="vertical"

                        android:layout_width="0dp"
                        android:layout_height="wrap_content">
                    <TextView
                            android:textSize="18sp"
                            android:text="@string/name"

                            android:textColor="@color/light_gray"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>
                    <TextView
                            android:layout_marginTop="8dp"
                            android:textSize="14sp"
                            android:text="@string/mohmmad_edeline"
                            android:id="@+id/txtName"
                            android:textColor="@color/light_gray"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>


                </LinearLayout>
                <LinearLayout
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:orientation="horizontal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">
                    <ImageView
                            android:src="@drawable/ic_navigate_next_black_24dp"
                            android:layout_width="32dp"
                            android:layout_height="32dp"/>

                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                    android:layout_marginTop="@dimen/activity_horizontal_margin"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <LinearLayout
                        android:layout_weight="1"
                        android:orientation="vertical"

                        android:layout_width="0dp"
                        android:layout_height="wrap_content">
                    <TextView
                            android:textSize="18sp"
                            android:text="Phone Number"
                            android:textColor="@color/light_gray"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>
                    <TextView
                            android:layout_marginTop="8dp"
                            android:textSize="14sp"
                            android:id="@+id/number"
                            android:text="76 584 752"
                            android:textColor="@color/light_gray"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>


                </LinearLayout>
                <LinearLayout
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:orientation="horizontal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">
                    <ImageView
                            android:src="@drawable/ic_navigate_next_black_24dp"
                            android:layout_width="32dp"
                            android:layout_height="32dp"/>

                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                    android:layout_marginTop="@dimen/activity_horizontal_margin"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <LinearLayout
                        android:layout_weight="1"
                        android:orientation="vertical"

                        android:layout_width="0dp"
                        android:layout_height="wrap_content">
                    <TextView
                            android:textSize="18sp"
                            android:text="Address"
                            android:textColor="@color/light_gray"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>
                    <TextView
                            android:layout_marginTop="8dp"
                            android:textSize="14sp"
                            android:text="Beirut, Salim Slem, Main Street"
                            android:textColor="@color/light_gray"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>


                </LinearLayout>
                <LinearLayout
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:orientation="horizontal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">
                    <ImageView
                            android:src="@drawable/ic_navigate_next_black_24dp"
                            android:layout_width="32dp"
                            android:layout_height="32dp"/>

                </LinearLayout>
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>